updated design and naming

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crwn-clothing-server",
+  "name": "sosa-clothing-server",
   "version": "1.0.0",
   "engines": {
     "node": "v12.13.1",
